<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="16dp"
    app:cardCornerRadius="8dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/nameField"
                android:textSize="18sp"
                android:inputType = "text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/model_name"
                app:met_floatingLabel="highlight"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/trotterNumField"
                android:textSize="18sp"
                android:digits="1234567890-"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/site_number"
                app:met_floatingLabel="highlight"/>


        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:text="@string/register"
            android:background="@color/colorPrimaryDark"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.v7.widget.CardView>